# nexrig

./: .CLAUDE  .gitignore  USB-SSB-exciter.kicad_prl  USB-SSB-exciter.kicad_pro  USB-SSB-exciter.kicad_sch  USB-SSB-txcvr.kicad_pro  USB-SSB-txcvr.kicad_sch  VFO.kicad_sch  ant.kicad_sch  microcontroller.kicad_sch  rx-demod.kicad_sch  rx-signal-chain.kicad_sch  tuning-dac.kicad_sch  tx-signal-chain.kicad_sch  usb-ssb-exciter.ioc
doc/: ARCHITECTURE.md  CONSTRUCTION.md  L1L2.md  OVERVIEW.md  RX-ARCHITECTURE.md  RX-PRESELECTOR.md  TX-ARCHITECTURE.md  USER-EXPERIENCE.md  rx_preselector_analysis.md  vswr-measurement-design.md
doc/NexRig/: 200 ohm to 50 ohm matching transformer.md  EER DPD and time alignment architecture.md  Receiver signal chain summary.md  ST-link debugging.md  Untitled.md  schematic-review-checklist.md
fpga/: README.md
fpga/rtl/: nco.sv  nexrig.lpf  spiSlave.sv  top.sv
fw/: .cproject  .mxproject  .project  CMakeLists.txt  README.md  STM32H562VITX_FLASH_MMT_TEMPLATE.ld  fw.ioc  power-sequencing-microcontroller.c
fw-attic/: .cproject  README.md  fw.ioc  fw.launch
fw-attic/Debug/: fw.list  sources.mk
fw/CAD_models_STM32H562VIT6/KiCADv6/footprints.pretty/: LQFP100_14X14_STM-L.kicad_mod
fw/Core/Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  stm32h7xx_it.h
fw/Core/Src/: main.c  stm32h5xx_hal_msp.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
fw/Debug/: fw.elf  fw.list  fw.map  makefile  objects.list  sources.mk
fw/Debug/Core/Src/: freertos.d  main.cyclo  main.d  main.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.d  stm32h7xx_hal_msp.su  stm32h7xx_it.cyclo  stm32h7xx_it.d  stm32h7xx_it.su  subdir.mk  system_stm32h7xx.d
fw/Debug/Core/Startup/: subdir.mk
fw/Debug/Drivers/BSP/STM32H7xx_Nucleo/: stm32h7xx_nucleo.d  subdir.mk
fw/Debug/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.d  stm32h7xx_hal_adc.d  stm32h7xx_hal_adc_ex.d  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_exti.d  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_pcd_ex.d  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_spi.d  stm32h7xx_hal_tim_ex.d  stm32h7xx_hal_uart_ex.d  stm32h7xx_hal_usart.d  stm32h7xx_hal_usart_ex.d  subdir.mk
fw/Debug/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/: subdir.mk  usbd_audio.d
fw/Debug/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: subdir.mk  usbd_core.d  usbd_ctlreq.d  usbd_ioreq.d
fw/Debug/USB_DEVICE/App/: subdir.mk  usb_device.d  usbd_audio_if.d  usbd_desc.d
fw/USBPD/App/: usbpd.c  usbpd_dpm_core.c  usbpd_pwr_if.c
fw/USB_DEVICE/App/: usb_device.c  usbd_desc.c
fw/include/coms/: RestApiHandler.h
fw/include/hw/: RfController.h
fw/src/: main.cpp
hw/: .gitignore  BPF-values.csv  BPF.kicad_sch  DAC.kicad_sch  Library.bak  Library.kicad_sym  NOTES.md  PIN-bias-boost.kicad_sch  USB-SSB-txcvr-altium-import.kicad_sym  USB-SSB-txcvr.csv  USB-SSB-txcvr.kicad_pcb  USB-SSB-txcvr.kicad_prl  USB-SSB-txcvr.kicad_pro  USB-SSB-txcvr.kicad_sch  USB-SSB-txcvr.wbk  VFO.kicad_sch  ant-tuner.kicad_sch  ant.kicad_sch  band-plan.csv  band1.mod  band2.mod  band6.mod  bpf-simulation-simple.cir  bpf-simulation-template.cir  build-eer-tank-tables.py  compare-filter-designs.py  corrected_ham_band_filters.py  debug_40m.cir  debug_simple_lpf.cir  design-block-lib-table  eer-buckboost.kicad_sch  eer-model.dat.ngspice  eer-tank-tables.csv  ethernet.kicad_sch  filter.cir  filter.py  filter_plot.py  filter_schematic.txt  filter_topology.txt  fine_tuned_chebyshev.py  (+50 more)
hw/Library.pretty/: 1016712900011LF.kicad_mod  2929SQ-501.kicad_mod  2xFT140-stacked-bruene.kicad_mod  2xFT140-stacked.kicad_mod  2xFT240-stacked.kicad_mod  68710814022.kicad_mod  Bourns PQ2614BLA-6R8K.kicad_mod  CSS2H3920K5L00F.kicad_mod  Coilcraft-uni10.kicad_mod  D0353.kicad_mod  DCK6.kicad_mod  DFLS12007.kicad_mod  ECSTXO201633400TR.kicad_mod  EEH-ZA1H680P.kicad_mod  FTSH10501LDVK.kicad_mod  Fair-Rite 2843000202 bifilar #14AWG.kicad_mod  IGB110S101XTMA1.kicad_mod  INDC2012X105N.kicad_mod  IND_XGL4030_COC.kicad_mod  KRL3216T4AMR008FT1.kicad_mod  L_Wurth_10.6mm_sq_SMT.kicad_mod  (+27 more)
mock-server/: README.md  package-lock.json  package.json
pcb-caps/: gemini-model.scad  model.openscad
sim-stuff/: band3.mod  band4.mod  band5.mod  band7.mod  build-eer-tank-tables.py  compare-all-three-designs.py  compare_with_schematic.py  corrected_chebyshev_bpf.py  coupled-resonator-filter.py  coupled-winding-filter.py  debug_single_band.py  draw_filter_schematic.py  eer-model.sch  filter.py  fixed_topology.py  ham_band_3pole_filters.py  lpf.sch  realistic_40m.py  simulate-all-bands.py  simulate-and-plot.py  sixth_order_chebyshev_bpf.py  transformer-loading-analysis.py  transformer-matched-filter.py  tuned_40m.py  tx-path.sch
tools/: merge-kicad-sym.py
uC/: .mxproject  STM32H562VITX_FLASH.ld  STM32H562VITX_RAM.ld
(+100 files in other folders)
